tests/fail/invalid_syntax.stderr
error: expected identifier
 --> tests/fail/invalid_syntax.rs:4:16
  |
4 |     trait_mux!(123);
  |                ^^^
